# gail_navigation

./: .gitignore  README.md  predict.py  requirements.txt  requirements_v2.txt  rl_train.py  train.py
GailNavigationNetwork/: README.md  dataloader.py  model.py  requirements.txt  setup.py
GailNavigationNetwork/GailNavigationNetwork/: model.py  utilities.py
GailNavigationNetwork/GailNavigationNetwork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kris_envs/: README.md  setup.py
kris_envs/kris_envs/: __init__.py
kris_envs/kris_envs/envs/: __init__.py  kris_env.py  kris_env_v1.py  kris_env_v1_2.py  kris_env_v2.py  kris_env_v3.py
ros2/: CMakeLists.txt  package.xml
ros2/config/: learning_parameters.yaml
ros2/gail_navigation/: gazebo_connection.py
ros2/gail_navigation/kris_envs/envs/: kris_env.py
ros2/kris_env/: __init__.py  kris_env.py
ros2/launch/: simulation.launch.py
ros2/scripts/: database_creator.py  depth_probe.py  goal_republisher.py  odom_tracker.py  publish_cmd_vel.py  rl_test.py  rl_train.py  rl_train_sample.py  test.ipynb  test_data_collector.py  test_script.py
ros2/scripts/archieve/: depth_probe.py  test_data_collector.py.bak  test_script.py
ros2/scripts/archieve/envs/: gazebo_connection.py  kris_env.py
ros2/scripts/archieve/gym_env/: gazebo_connection.py  kris_state_controller.py
ros2/scripts/archieve/kris_env_old/: kris_env.py
ros2/scripts/archieve/kris_envs/: README.md
ros2/scripts/archieve/kris_envs/kris_envs/: __init__.py
ros2/scripts/archieve/kris_envs/kris_envs/envs/: __init__.py  kris_env.py
ros2/scripts/archieve/kris_envs/kris_envs/wrappers/: gazebo_connection.py
ros2/scripts/gym_env/: gazebo_connection.py  gazebo_connection_v2.py  goal_publisher.py  kris_env.py
ros2/scripts/gymansium_env/: kris_env.py
ros2/scripts/kris_envs/envs/: gazebo_connection.py  kris_env.py
ros2/src/: ros_bag_player.cpp
tests/: ablation_study.ipynb  dataset_creator.ipynb  evaluator.ipynb  hdf5reader.py  imitaion_library.ipynb  krisv1.py  test.hdf5  test.ipynb  train_log.md  trajfomhdf.ipynb
(+3 files in other folders)
